# 42_python_data_science_piscine

./: requirements.txt
p0-Starting/ex00/: Hello.py
p0-Starting/ex01/: format_ft_time.py
p0-Starting/ex02/: find_ft_type.py
p0-Starting/ex03/: NULL_not_found.py
p0-Starting/ex04/: whatis.py
p0-Starting/ex05/: building.py
p0-Starting/ex06/: filterstring.py  ft_filter.py
p0-Starting/ex07/: sos.py
p0-Starting/ex08/: Loading.py  tester.py
p0-Starting/ex09/: README.md  pyproject.toml
p0-Starting/ex09/ft_package/: count_in_list.py
p0-Starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
p1-Array/ex00/: give_bmi.py
p1-Array/ex01/: array2D.py
p1-Array/ex02/: load_image.py  tester.py
p1-Array/ex03/: load_image.py  zoom.py
p1-Array/ex04/: load_image.py  rotate.py
p1-Array/ex05/: pimp_image.py  tester.py
p2-DataTable/ex00/: load_csv.py
p2-DataTable/ex01/: aff_life.py
p2-DataTable/ex02/: aff_pop.py
p2-DataTable/ex03/: projection_life.py
p3-oop/ex00/: S1E9.py
p3-oop/ex01/: tester.py
p3-oop/ex02/: DiamondTrap.py  S1E7.py
p3-oop/ex03/: ft_calculator.py
p3-oop/ex04/: ft_calculator.py
p4-dod/ex00/: statistics.py
p4-dod/ex01/: in_out.py
p4-dod/ex02/: callLimit.py
p4-dod/ex03/: tester.py
